# PIIDigger

./: .gitignore  CHANGELOG.MD  CONTRIBUTING.md  ERRATA.md  LICENSE  PERFORMANCE.md  README.md  WINDOWS_RELEASES.md  build_windows_embedded.ps1  build_windows_exe.ps1  piidigger.cmd  piidigger.py  pyproject.toml
.github/workflows/: build-package.yml  build-pyinstaller.yml  embedded-build.yml  release.yml  run-tests.yml
binaries/windows/: README.md  SHA256  SHA384  SHA512
docs/: ARCHITECTURE_REDESIGN.md  CURRENT_ISSUES.md  IMPLEMENTATION_CHECKLIST.md  README.md  TESTING_STRATEGY.md
src/piidigger/: __main__.py  classes.py  console.py  filescan.py  getencoding.py  getmime.py  globalfuncs.py  globalvars.py  logmanager.py  piidigger.py  queuefuncs.py
testdata/: CCM-ISO_Reverse_Mapping_and_Gap_Analysis_FINAL.xlsx  Cloud Storage Providers.xlsx  EULA.txt  binary-json.json
testdata/docx/: lorem-ipsum-1line-comments.docx  lorem-ipsum-1line-header-footer.docx  lorem-ipsum-1line-heading-toc.docx  lorem-ipsum-1line-hyperlink.docx  lorem-ipsum-1line-with-footnote-endnote.docx  lorem-ipsum-1line-with-table.docx  lorem-ipsum-1line-wordart.docx  lorem-ipsum-1line.docx  lorem-ipsum-2paragraph-with-table.docx  lorem-ipsum-2paragraph.docx
testdata/pan/: Excel Sheet.xls  Excel Sheet.xlsx  example-file-utf16-BOM.txt  example-file-utf8-BOM.txt  example-file.7z  example-file.tar  example-file.tar.bz  example-file2 (1).txt  index.html  sample-pans-ascii.csv  sample-pans-mac.csv  sample-pans-utf8.csv  sample-pans.doc  sample-pans.docx  sample-pans.json  sample-pans.odp  sample-pans.ods  sample-pans.odt  sample-pans.ppt  sample-pans.pptx  sample-pans.rtf  sample-pans.xml
testdata/pii/: contact-info.txt
testdata/plaintext/: base64-xml-test.xml  lorem-ipsum-1line-with-blank-ending-line-utf16le-crlf.txt  lorem-ipsum-2line-utf8-crlf-1000-bytes.txt  lorem-ipsum-2line-utf8-crlf-649-bytes.txt  lorem-ipsum-2line-utf8-crlf-650-bytes.txt  lorem-ipsum-2line-utf8-crlf-651-bytes.txt  lorem-ipsum-2paragraph-utf8-crlf.txt  lorem-ipsum-700kb-utf8-crlf.txt  mislabeled-text-file.txt  random-data-700-bytes.txt
testdata/xls/: empty-file.xls  (+5 more)
tests/: test_email.py  test_getencoding.py  test_make_chunks.py  test_pan.py  test_read_docx_file.py  test_read_pdf_file.py  test_read_plaintext_file.py  test_read_xls_file.py  test_read_xlsx_file.py  test_write_default_config.py
(+24 files in other folders)
